# parallel_bfs

./: .gitignore  CMakeLists.txt  README.md  result.py  result_large_graph.py  result_web_google_graph.py
graphs/: graph-info.json
include/: parallel_bfs.h
src/: benchmark.cpp  main.cpp  parallel_bfs.cpp
